k8s/noti-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noti-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: noti-service
  template:
    metadata:
      labels:
        app: noti-service
    spec:
      containers:
      - name: noti-service
        image: arittroc/releasepilot-noti-service:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"      # 50 millicores (5% of 1 CPU core)
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 4005
---
apiVersion: v1
kind: Service
metadata:
  name: noti-service
spec:
  selector:
    app: noti-service
  ports:
    - protocol: TCP
      port: 4005
      targetPort: 4005
