k8s/services-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: services-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: services-service
  template:
    metadata:
      labels:
        app: services-service
    spec:
      containers:
      - name: services-service
        image: arittroc/releasepilot-services-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: services-service
spec:
  selector:
    app: services-service
  ports:
    - protocol: TCP
      port: 4006
      targetPort: 4001
